--- a/contact.html
+++ b/contact.html
@@ -52,93 +52,91 @@
   </head>
 
   <body>
-    <!-- ======= Header ======= -->
-    <header id="header" class="header d-flex align-items-center">
-      <div
-        class="container-fluid container-xl d-flex align-items-center justify-content-between"
-      >
-        <a href="index.html" class="logo d-flex align-items-center">
-          <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.png" alt=""> -->
-          <div class="" style="display: flex; gap: 1rem; align-items: center">
-            <img
-              src="./assets/img/logoImage.png"
-              alt=""
-              width="36px"
-              height="40px"
-            />
-            <img
-              src="./assets/img/logoText.png"
-              alt=""
-              width="137px"
-              height="40px"
-            />
-          </div>
-        </a>
+   <!-- ======= Header ======= -->
+   <header id="header" class="header d-flex align-items-center">
+    <div
+      class="container-fluid container-xl d-flex align-items-center justify-content-between"
+    >
+      <a href="index.html" class="logo d-flex align-items-center">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <div class="" style="display: flex; gap: 1rem; align-items: center">
+          <img
+          src="./assets/img/logoImage.png"
+          alt=""
+          class="logo-image-navbar"
+        />
+        <img
+          src="./assets/img/logoText.png"
+          alt=""
+          height="50px"
+        />
+        </div>
+      </a>
 
-        <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
-        <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
-        <nav id="navbar" class="navbar">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li class="dropdown">
-              <a href="#"
-                ><span>Service Details</span>
-                <i class="bi bi-chevron-down dropdown-indicator"></i
-              ></a>
-              <ul>
-                <li>
-                  <a href="service-details.html#deisgn-service-details"
-                    >Deisgn & Engineering</a
-                  >
-                </li>
-                <li>
-                  <a href="service-details.html#electrical-system-details"
-                    >Electrical System</a
-                  >
-                </li>
-                <li>
-                  <a href="service-details.html#fire-system-details"
-                    >Fire Safety</a
-                  >
-                </li>
-                <li>
-                  <a href="service-details.html#communication-safety-details"
-                    >Communication & Security</a
-                  >
-                </li>
-                <li>
-                  <a href="service-details.html#hvax-system-details"
-                    >HVAC System</a
-                  >
-                </li>
-                <li>
-                  <a href="service-details.html#plumbing-drainage-details"
-                    >Plumbing & Drainage</a
-                  >
-                </li>
-                <li>
-                  <a href="service-details.html#civil-work-details"
-                    >Civil Works</a
-                  >
-                </li>
-                <li>
-                  <a href="service-details.html#cleaning-soft-details"
-                    >Cleaning & Soft Services</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li><a href="contact.html" class="active">Contact</a></li>
-          </ul>
-        </nav>
-        <!-- .navbar -->
-      </div>
-    </header>
-    <!-- End Header -->
+      <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+      <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li class="dropdown">
+            <a href="#"
+              ><span>Service Details</span>
+              <i class="bi bi-chevron-down dropdown-indicator"></i
+            ></a>
+            <ul>
+              <li>
+                <a href="service-details.html#deisgn-service-details"
+                  >Deisgn & Engineering</a
+                >
+              </li>
+              <li>
+                <a href="service-details.html#electrical-system-details"
+                  >Electrical System</a
+                >
+              </li>
+              <li>
+                <a href="service-details.html#fire-system-details"
+                  >Fire Safety</a
+                >
+              </li>
+              <li>
+                <a href="service-details.html#communication-safety-details"
+                  >Communication & Security</a
+                >
+              </li>
+              <li>
+                <a href="service-details.html#hvax-system-details"
+                  >HVAC System</a
+                >
+              </li>
+              <li>
+                <a href="service-details.html#plumbing-drainage-details"
+                  >Plumbing & Drainage</a
+                >
+              </li>
+              <li>
+                <a href="service-details.html#civil-work-details"
+                  >Civil Works</a
+                >
+              </li>
+              <li>
+                <a href="service-details.html#cleaning-soft-details"
+                  >Cleaning & Soft Services</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <!-- .navbar -->
+    </div>
+  </header>
+  <!-- End Header -->
 
     <main id="main">
       <!-- ======= Breadcrumbs ======= -->
@@ -284,19 +282,42 @@
     </main>
     <!-- End #main -->
 
-    <!-- ======= Footer ======= -->
-    <footer id="footer" class="footer">
+         <!-- ======= Footer ======= -->
+     <footer id="footer" class="footer">
       <div class="footer-content position-relative">
         <div class="container">
           <div class="row">
             <div class="col-lg-4 col-md-6">
               <div class="footer-info">
-                <h3>UpConstruction</h3>
+                <div
+                  class=""
+                  style="
+                    display: flex;
+                    gap: 1rem;
+                    align-items: center;
+                    margin-bottom: 1.5rem;
+                  "
+                >
+                <img
+                src="./assets/img/logoImage.png"
+                alt=""
+               
+                height="70px"
+              />
+              <img
+                src="./assets/img/logoText.png"
+                alt=""
+            
+                height="60px"
+              />
+                </div>
                 <p>
-                  A108 Adam Street <br />
-                  NY 535022, USA<br /><br />
-                  <strong>Phone:</strong> +1 5589 55488 55<br />
-                  <strong>Email:</strong> info@example.com<br />
+                  Building No 94, Othman Bin Affan Street 180, <br />
+                  Doha, Qatar, PO Box No:36258
+                  <br /><br />
+                  <strong>Phone:</strong> +974 66908915<br />
+                  <strong>Phone:</strong> +974 30806490<br />
+                  <strong>Email:</strong> info@al-afzahgroup.com<br />
                 </p>
                 <div class="social-links d-flex mt-3">
                   <a
@@ -328,10 +349,10 @@
               <h4>Useful Links</h4>
               <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Terms of service</a></li>
-                <li><a href="#">Privacy policy</a></li>
+                <li><a href="/about.html">About us</a></li>
+                <li><a href="#services">What we offer</a></li>
+                <li><a href="#alt-services">Services</a></li>
+                <li><a href="#projects">Projects</a></li>
               </ul>
             </div>
             <!-- End footer links column-->
@@ -339,37 +360,56 @@
             <div class="col-lg-2 col-md-3 footer-links">
               <h4>Our Services</h4>
               <ul>
-                <li><a href="#">Web Design</a></li>
-                <li><a href="#">Web Development</a></li>
-                <li><a href="#">Product Management</a></li>
-                <li><a href="#">Marketing</a></li>
-                <li><a href="#">Graphic Design</a></li>
+                <li>
+                  <a href="service-details.html#deisgn-service-details"
+                    >Deisgn & Engineering</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#electrical-system-details"
+                    >Electrical System</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#fire-system-details"
+                    >Fire Safety</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#communication-safety-details"
+                    >Communication & Security</a
+                  >
+                </li>
               </ul>
             </div>
             <!-- End footer links column-->
 
             <div class="col-lg-2 col-md-3 footer-links">
-              <h4>Hic solutasetp</h4>
+              <h4>Our Services</h4>
               <ul>
-                <li><a href="#">Molestiae accusamus iure</a></li>
-                <li><a href="#">Excepturi dignissimos</a></li>
-                <li><a href="#">Suscipit distinctio</a></li>
-                <li><a href="#">Dilecta</a></li>
-                <li><a href="#">Sit quas consectetur</a></li>
+                <li>
+                  <a href="service-details.html#hvax-system-details"
+                    >HVAC System</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#plumbing-drainage-details"
+                    >Plumbing & Drainage</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#civil-work-details"
+                    >Civil Works</a
+                  >
+                </li>
+                <li>
+                  <a href="service-details.html#cleaning-soft-details"
+                    >Cleaning & Soft Services</a
+                  >
+                </li>
               </ul>
             </div>
             <!-- End footer links column-->
-
-            <div class="col-lg-2 col-md-3 footer-links">
-              <h4>Nobis illum</h4>
-              <ul>
-                <li><a href="#">Ipsam</a></li>
-                <li><a href="#">Laudantium dolorum</a></li>
-                <li><a href="#">Dinera</a></li>
-                <li><a href="#">Trodelas</a></li>
-                <li><a href="#">Flexo</a></li>
-              </ul>
-            </div>
             <!-- End footer links column-->
           </div>
         </div>
@@ -378,23 +418,17 @@
       <div class="footer-legal text-center position-relative">
         <div class="container">
           <div class="copyright">
-            &copy; Copyright <strong><span>UpConstruction</span></strong
-            >. All Rights Reserved
+            &copy; Copyright <strong><span>AL AFZAH GROUP </span></strong>. All
+            Rights Reserved
           </div>
           <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/ -->
-            Designed by
-            <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed
-            by <a href="https://themewagon.com">ThemeWagon</a>
+            Developed by <a href="https://www.linkedin.com/in/muhammed-irshad-81985b287/">Muhammed Irshad</a> | Powered by <a href="https://www.instagram.com/codecave.media.in/">Code Cacve Media</a>
+
           </div>
         </div>
       </div>
     </footer>
     <!-- End Footer -->
-
     <a
       href="#"
       class="scroll-top d-flex align-items-center justify-content-center"
