--- a/services.html
+++ b/services.html
@@ -52,93 +52,91 @@
   </head>
 
   <body>
-    <!-- ======= Header ======= -->
-    <header id="header" class="header d-flex align-items-center">
-      <div
-        class="container-fluid container-xl d-flex align-items-center justify-content-between"
-      >
-        <a href="index.html" class="logo d-flex align-items-center">
-          <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.png" alt=""> -->
-          <div class="" style="display: flex; gap: 1rem; align-items: center">
-            <img
-              src="./assets/img/logoImage.png"
-              alt=""
-              width="36px"
-              height="40px"
-            />
-            <img
-              src="./assets/img/logoText.png"
-              alt=""
-              width="137px"
-              height="40px"
-            />
-          </div>
-        </a>
+  <!-- ======= Header ======= -->
+  <header id="header" class="header d-flex align-items-center">
+    <div
+      class="container-fluid container-xl d-flex align-items-center justify-content-between"
+    >
+      <a href="index.html" class="logo d-flex align-items-center">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <div class="" style="display: flex; gap: 1rem; align-items: center">
+          <img
+          src="./assets/img/logoImage.png"
+          alt=""
+          class="logo-image-navbar"
+        />
+        <img
+          src="./assets/img/logoText.png"
+          alt=""
+          height="50px"
+        />
+        </div>
+      </a>
 
-        <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
-        <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
-        <nav id="navbar" class="navbar">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html" class="active">Services</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li class="dropdown">
-              <a href="#"
-                ><span>Service Details</span>
-                <i class="bi bi-chevron-down dropdown-indicator"></i
-              ></a>
-              <ul>
-                <li>
-                  <a href="service-details.html#deisgn-service-details"
-                    >Deisgn & Engineering</a
-                  >
-                </li>
-                <li>
-                  <a href="service-details.html#electrical-system-details"
-                    >Electrical System</a
-                  >
-                </li>
-                <li>
-                  <a href="service-details.html#fire-system-details"
-                    >Fire Safety</a
-                  >
-                </li>
-                <li>
-                  <a href="service-details.html#communication-safety-details"
-                    >Communication & Security</a
-                  >
-                </li>
-                <li>
-                  <a href="service-details.html#hvax-system-details"
-                    >HVAC System</a
-                  >
-                </li>
-                <li>
-                  <a href="service-details.html#plumbing-drainage-details"
-                    >Plumbing & Drainage</a
-                  >
-                </li>
-                <li>
-                  <a href="service-details.html#civil-work-details"
-                    >Civil Works</a
-                  >
-                </li>
-                <li>
-                  <a href="service-details.html#cleaning-soft-details"
-                    >Cleaning & Soft Services</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
-        <!-- .navbar -->
-      </div>
-    </header>
-    <!-- End Header -->
+      <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+      <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li class="dropdown">
+            <a href="#"
+              ><span>Service Details</span>
+              <i class="bi bi-chevron-down dropdown-indicator"></i
+            ></a>
+            <ul>
+              <li>
+                <a href="service-details.html#deisgn-service-details"
+                  >Deisgn & Engineering</a
+                >
+              </li>
+              <li>
+                <a href="service-details.html#electrical-system-details"
+                  >Electrical System</a
+                >
+              </li>
+              <li>
+                <a href="service-details.html#fire-system-details"
+                  >Fire Safety</a
+                >
+              </li>
+              <li>
+                <a href="service-details.html#communication-safety-details"
+                  >Communication & Security</a
+                >
+              </li>
+              <li>
+                <a href="service-details.html#hvax-system-details"
+                  >HVAC System</a
+                >
+              </li>
+              <li>
+                <a href="service-details.html#plumbing-drainage-details"
+                  >Plumbing & Drainage</a
+                >
+              </li>
+              <li>
+                <a href="service-details.html#civil-work-details"
+                  >Civil Works</a
+                >
+              </li>
+              <li>
+                <a href="service-details.html#cleaning-soft-details"
+                  >Cleaning & Soft Services</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <!-- .navbar -->
+    </div>
+  </header>
+  <!-- End Header -->
 
     <main id="main">
       <!-- ======= Breadcrumbs ======= -->
@@ -583,18 +581,18 @@
                   margin-bottom: 1.5rem;
                 "
               >
-                <img
-                  src="./assets/img/logoImage.png"
-                  alt=""
-                  width="36px"
-                  height="40px"
-                />
-                <img
-                  src="./assets/img/logoText.png"
-                  alt=""
-                  width="137px"
-                  height="40px"
-                />
+              <img
+              src="./assets/img/logoImage.png"
+              alt=""
+             
+              height="70px"
+            />
+            <img
+              src="./assets/img/logoText.png"
+              alt=""
+          
+              height="60px"
+            />
               </div>
               <p>
                 Building No 94, Othman Bin Affan Street 180, <br />
@@ -707,13 +705,8 @@
           Rights Reserved
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/ -->
-          Designed by
-          <a href="https://www.instagram.com/codecave.media.in/">CODE CAVE MEDIA</a> Developed
-          by <a href="https://www.linkedin.com/in/muhammed-irshad-81985b287/">Muhammed Irshad</a>
+          Developed by <a href="https://www.linkedin.com/in/muhammed-irshad-81985b287/">Muhammed Irshad</a> | Powered by <a href="https://www.instagram.com/codecave.media.in/">Code Cacve Media</a>
+
         </div>
       </div>
     </div>
